infra/k8s/base/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: recipe
  labels:
    app: auth-service # Updated for clarity
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service # Make sure this matches the updated label
  template:
    metadata:
      labels:
        app: auth-service # Updated label to match the selector
    spec:
      containers:
        - name: auth-service
          image: gabeodame/auth-service:1.0.3
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: recipe
  labels:
    app: auth-service
  name: auth-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: auth-servicep
