infra/k8s/base/recipe-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: recipe
  labels:
    app: recipe
  name: recipe-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe
  template:
    metadata:
      labels:
        app: recipe
    spec:
      containers:
        - name: recipe
          image: gabeodame/recipe-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: recipe
  labels:
    app: recipe
  name: recipe-service
spec:
  ports:
    - name: recipe
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: recipe
  type: ClusterIP
